package calculator;

import "shared/shared.proto";

option java_generic_services = true;
option java_package = "calculator";
option java_outer_classname = "Calculator";

message Work {
    enum Operation {
        ADD = 1;
        SUBTRACT = 2;
        MULTIPLY = 3;
        DIVIDE = 4;
    }

    required int32 num1 = 1 [default = 0];
    required int32 num2 = 2;
    required Operation op = 3;
    optional string comment = 4;

    // no exceptions in protobuf

}

message CalculateRequest {
    required int32 logid = 1;
    required Work work = 2;
}

message AddRequest {
    required int32 num1 = 1 [default = 0];
    required int32 num2 = 2;
}

message Number {
    required int32 number = 1;
}

message VoidRequest {

}

message VoidResponse {

}

message SharedStructList {
    repeated shared.SharedStruct struct = 1;
}

message SharedStructMap {
    repeated shared.SharedStructEntry entry = 1;
}

// no inheritance of services
service CalculatorService {
    rpc Ping (VoidRequest) returns (VoidResponse); // no void message request/response
    rpc Add (AddRequest) returns (Number); // only one parameter should be
    rpc Calculate (CalculateRequest) returns (Number); // no scalar types here
    rpc Zip (VoidRequest) returns (VoidResponse); // one way response depends on rpc implementation, i guess...
    rpc GetStruct (Number) returns (shared.SharedStruct);
    rpc GetAllStructsList (VoidRequest) returns (SharedStructList);
    rpc GetAllStructsMap(VoidRequest) returns (SharedStructMap); // like map...
}