package shared;

message SharedStruct {
    required int32 key = 1;
    required string value = 2;
}

message SharedStructEntry {
    required int32 key = 1;
    required SharedStruct value = 2;
}